# Computer-Vision-ImageProcessor

./: CMakeLists.txt  DEEP_DIVE_DOC.html  DEEP_DIVE_DOC.md  README.md  build_err.txt  build_err2.txt  build_err3.txt  build_error.txt  cmake_out.txt  req.md  valgrind_output.txt
.github/: copilot-instructions.md
docs/: DEEP_DIVE_GUIDE.md  DEVELOPER_GUIDE.md  Equalize_guidelines.md
include/: App.h  Filtering.h  FrequencyFilters.h  HistogramFrame.h  HistogramPanel.h  ImageFrame.h  ImagePanel.h  ImageProcessor.h  MainFrame.h
src/: App.cpp  Filtering.cpp  FrequencyFilters.cpp  HistogramFrame.cpp  HistogramPanel.cpp  ImageFrame.cpp  ImagePanel.cpp  ImageProcessor.cpp  MainFrame.cpp
